# semantic_labels_sys

./: .gitignore  .gitmodules  README.md
catkin_ws/src/apriltags_ros/apriltags_ros/launch/: cali_cam1.launch  cali_cam2.launch
catkin_ws/src/arm_operation/launch/: ur5_real.launch
catkin_ws/src/barcode_sys/ssd_prediction/saver/: README.md
catkin_ws/src/barcode_sys/ssd_prediction/src/: bb_ssd_prediction.py  u_network.py
catkin_ws/src/hand_eye_calibration/: CMakeLists.txt  calibration.sh
catkin_ws/src/hand_eye_calibration/data/: calibration.txt
catkin_ws/src/hand_eye_calibration/launch/: fake_tcp_publisher.launch
catkin_ws/src/hand_eye_calibration/src/: cam_on_hand_navy.cpp  static_cam_calibration.cpp
catkin_ws/src/hand_eye_calibration/src/qt/: mainwindow.cpp
catkin_ws/src/in_hand_manipulator/dynamixel_motor/: README.md
catkin_ws/src/in_hand_manipulator/prg/prg_100_control/: CMakeLists.txt  package.xml
catkin_ws/src/in_hand_manipulator/prg/prg_100_description/: CMakeLists.txt  package.xml
catkin_ws/src/in_hand_manipulator/prg/prg_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/pose_estimate/arm_control/: CMakeLists.txt  package.xml
catkin_ws/src/pose_estimate/pcl_perception/: CMakeLists.txt
catkin_ws/src/pose_estimate/pcl_perception/launch/: base.launch
catkin_ws/src/pose_estimate/pcl_perception/src/: bbox_to_pose.cpp  pcl_preprocessing.cpp  pub_arti_pose.h
catkin_ws/src/pose_estimate/pose_estimation/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/pose_estimate/pose_estimation/launch/: mushroom_pose.launch  pose_estimation.launch  pub_arti_pose.launch  slam_map_pub.launch
catkin_ws/src/pose_estimate/pose_estimation/src/: bn_pose_node.cpp  bn_pose_node.h  depth_to_pose.py  mushroom_pose.cpp  mushroom_pose.h  object_pose_node.cpp  object_pose_node.h  pub_arti_pose.cpp
catkin_ws/src/pose_estimate/vacuum_control/: CMakeLists.txt  package.xml
catkin_ws/src/pose_estimate/vacuum_control/arduino code/vacuum_conveyor/: vacuum_conveyor.ino
catkin_ws/src/pose_estimate/vacuum_control/src/: vacuum_control.py
catkin_ws/src/semantic_system/: CMakeLists.txt  package.xml
catkin_ws/src/semantic_system/config/: rviz_vis.rviz
catkin_ws/src/semantic_system/launch/: main.launch  manipulator.launch  mushroom.launch  system.launch  text_prediction.launch
catkin_ws/src/semantic_system/src/: converter.py  fsm.py  mushroom_system.py  system_fsm.py  system_fsm1.py  tf_static
catkin_ws/src/text_detection/TextSnake/: CMakeLists.txt  package.xml
catkin_ws/src/text_detection/textsnake/: CMakeLists.txt  package.xml
catkin_ws/src/text_detection/textsnake/src/: saver.py  (+1 more)
catkin_ws/src/text_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/text_msgs/config/: commodity_list.txt  commodity_list_for_eval.txt
catkin_ws/src/text_msgs/msg/: bb_box.msg  int_arr.msg  object_pose.msg  text_detection_array.msg  text_detection_msg.msg  text_result.msg
catkin_ws/src/text_msgs/srv/: bn_pose_srv.srv  int32.srv  manipulation.srv  object_only.srv  pose_state.srv  predict_switch.srv  text_detection_srv.srv  text_recognize_srv.srv
catkin_ws/src/text_recognize/Moran_text_recog/: CMakeLists.txt  package.xml
catkin_ws/src/text_recognize/moran_text_recog/: CMakeLists.txt  package.xml
thesis/benchmark/: Evaluation.ipynb  generate_txt.py  rotate_input.py  xml_mask.py  xml_mask_reso.py
thesis/benchmark/.ipynb_checkpoints/: Evaluation-checkpoint.ipynb
thesis/benchmark/config/: commodity_list.txt  commodity_list_resolution.txt
thesis/benchmark/models/: asrn_res.py  moran.py
thesis/benchmark/models/senet/: se_resnet.py
thesis/benchmark/network/: se_resnet.py  textnet.py  vgg.py
thesis/benchmark/network/senet/: se_resnet.py
(+25 files in other folders)
